<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="250dp"
        card_view:contentPadding="10dp"
        card_view:cardUseCompatPadding="true"
        android:layout_marginBottom="10dp"
        card_view:cardCornerRadius="40dp">


        <TextView
            android:id="@+id/titleOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/Title"
            android:textSize="20sp"
        />

        <TextView
            android:id="@+id/descOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginStart="25dp"
            android:textSize="15sp"
            android:text="@string/Words"
            />

        <TextView
            android:id="@+id/timeOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="30dp"
            android:text="@string/Create"
            android:textSize="10sp"
            android:fontFamily="@font/nunito_light"
            />



    </androidx.cardview.widget.CardView>



</RelativeLayout>