<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".addNote">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E9F8EEE2"
        android:fontFamily="@font/nunito"
        android:hint="@string/Title"
        android:textColor="#000000"
        android:autofillHints="name"
        android:inputType="text"
        android:padding="15dp"
        android:lines="3"
        android:textSize="30sp"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:background="@color/primary"
        android:hint="@string/Words"
        android:textColor="@color/black"
        android:fontFamily="@font/nunito_regular"
        android:autofillHints="name"
        android:inputType="text"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_margin="15dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/baseline_save_24"
        android:contentDescription="@string/Create"
        app:backgroundTint="#F8D9614C"
        app:rippleColor="#F5F8EEE2" />




</RelativeLayout>